--- a/package.json
+++ b/package.json
@@ -1,20 +1,28 @@
 {
   "name": "async-task-queue",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Javascript task queue without any timer (interval, setTimeout ..)",
   "main": "async-task-queue.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node_modules/.bin/mocha"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/talsu/async-task-queue.git"
   },
-  "keywords": ["queue", "async-task-queue", "task queue"],
+  "keywords": [
+    "queue",
+    "async-task-queue",
+    "task queue"
+  ],
   "author": "talsu <talsu84@gmail.com>",
   "license": "BSD-3-Clause",
   "bugs": {
     "url": "https://github.com/talsu/async-task-queue/issues"
   },
-  "homepage": "https://github.com/talsu/async-task-queue#readme"
+  "homepage": "https://github.com/talsu/async-task-queue#readme",
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^2.4.5"
+  }
 }
